--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -1,7 +1,8 @@
 
 <mat-toolbar color="primary" class="tabs">
-        <span >Mart</span>
+        <span >E-Mart</span>
         <span class="tabs"> 
+         <button mat-button routerLink="product-dashboard">Dashboard</button>    
         <button mat-button routerLink="cart">Cart</button> 
          <button mat-button routerLink="order-history">Order History</button>
         <button mat-button (click)="logOut()" >LogOut</button> 
