--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title><b>Login</b></mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <mat-form-field>
+    <mat-label>Email</mat-label>
+    <input matInput placeholder="Enter your registered email" formControlName="email" />
+  </mat-form-field><br>
+  <mat-form-field>
+  <mat-label>Password</mat-label>
+  <input matInput type="password" placeholder="Enter your password" formControlName="password" />
+</mat-form-field><br>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Login</button><br><br>
+    <div> New User? <a routerLink="/signup">SignUp here</a></div>
+</form>
+  </mat-card-content>
+</mat-card>
