--- a/src/app/components/product-details/product-details.html
+++ b/src/app/components/product-details/product-details.html
@@ -1,1 +1,3 @@
-<p>product-details works!</p>
+<img src={{product?.img}} width="100" height="140">
+    <div class="title"><b>{{product?.productName}}</b></div>      
+
