--- a/src/app/components/product-dashboard/product-dashboard.html
+++ b/src/app/components/product-dashboard/product-dashboard.html
@@ -1,13 +1,88 @@
+<div class="top"> 
 <button class="add-button" matFab extended color="primary" (click)="openDialog()"><mat-icon >add</mat-icon>New Product</button>
 
+<mat-form-field class="search">
+  <mat-label><mat-icon>search</mat-icon> Search</mat-label>
+  <input matInput (keyup)='search($event)'>
+</mat-form-field>
+</div>
+
+   <table mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z8">
+
+  <ng-container matColumnDef="img">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header >
+      View
+    </th>
+    <td mat-cell *matCellDef="let product"> <img mat-card-image src={{product.img}} alt="Profile Photo"/> </td>
+  </ng-container>
+
+  
+  <ng-container matColumnDef="productName">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by productName">
+      Name
+    </th>
+    <td mat-cell *matCellDef="let product"> <b>{{product.productName}}</b> </td>
+  </ng-container>
+
+  
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by description">
+      Description
+    </th>
+    <td mat-cell *matCellDef="let product"> {{product.description}} </td>
+  </ng-container>
 
 
-<mat-grid-list cols="4" rowHeight="1:1" gutterSize="4px">
-  @for (product of products; track product.productId) {
-    <mat-grid-tile>
+  <ng-container matColumnDef="category">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by category">
+      Category
+    </th>
+    <td mat-cell *matCellDef="let product"> {{product.category}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="cost">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by cost">
+      Cost
+    </th>
+    <td mat-cell *matCellDef="let product"> {{ product.cost | currency:'INR' }} </td>
+  </ng-container>
+
+   <ng-container matColumnDef="quantity">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by quantity">
+      Quantity
+    </th>
+    <td mat-cell *matCellDef="let product"> {{product.quantity}} </td>
+  </ng-container>
+
+   <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef> Action</th>
+    <td mat-cell *matCellDef="let product">
+       <button mat-button color="accent"  (click)="productDetail(product.productId)"> <mat-icon>bookmark</mat-icon>Add to Cart</button>
+      <!-- <button mat-button color="warn"><mat-icon>shopping_cart</mat-icon>Shop now</button> -->
+     <button class="menu" mat-icon-button [matMenuTriggerFor]="menu">
+                                      <mat-icon>more_vert</mat-icon>
+                                    </button>
+                                    <mat-menu #menu="matMenu">
+                                        <button mat-menu-item (click)="openDialog(product)">Edit</button>
+                                        <button mat-menu-item (click)="deleteProduct(product.productId)">Delete</button>
+                                    </mat-menu>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+ <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons>
+  </mat-paginator>
+
+
+
+<!--     <mat-grid-tile>
       <mat-card class="custom-card">
-        <mat-card-header>
-          <mat-card-title><b>{{ product.productName }}</b></mat-card-title>
+        <mat-card-header class ="header">
+          <mat-card-title class="title"><b>{{ product.productName }}</b></mat-card-title>
    <button class="menu" mat-icon-button [matMenuTriggerFor]="menu">
                                       <mat-icon>more_vert</mat-icon>
                                     </button>
@@ -26,16 +101,14 @@
             <b>Category:</b> {{ product.category }} <br />
             <b>Cost :</b>  {{ product.cost }} <br />
             <b> Quantity:</b> {{ product.quantity}} <br />
-            <!-- <b> Availability:</b> {{ product.quantity}} <br /> -->
+            <b> Availability:</b> {{ product.quantity}} <br />
 
           </p>
         </mat-card-content>
 
         <mat-card-actions align="end">
-      <button mat-button color="accent"><mat-icon>bookmark</mat-icon>Add to Cart</button>
-      <button mat-button color="warn"><mat-icon>shopping_cart</mat-icon>Shop now</button>
+      <button mat-button color="accent" ><mat-icon>bookmark</mat-icon>Add to Cart</button>
+      <button mat-button color="warn" (click)="productDetail(product)"><mat-icon>shopping_cart</mat-icon>Shop now</button>
         </mat-card-actions>
       </mat-card>
-    </mat-grid-tile>
-  }
-</mat-grid-list>
+    </mat-grid-tile> -->
