--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -1,10 +1,11 @@
-
 <mat-toolbar color="primary" class="tabs">
-        <span >E-Mart</span>
-        <span class="tabs"> 
-         <button mat-button routerLink="product-dashboard">Dashboard</button>    
-        <button mat-button routerLink="cart">Cart</button> 
-         <button mat-button routerLink="order-history">Order History</button>
-        <button mat-button (click)="logOut()" >LogOut</button> 
-        </span>
-    </mat-toolbar>
+    <span class="title"><b>E-Mart</b></span>
+    @if(isLoggedIn){
+    <span class="tabs">
+        <button mat-button (click)="logOut()">LogOut</button>
+        <button mat-button routerLink="order-history">Order History</button>
+        <!-- <button mat-button routerLink="cart">Cart</button> -->
+        <button mat-button routerLink="product-dashboard">Dashboard</button>
+    </span>
+    }
+</mat-toolbar>
