--- a/src/app/components/product-details/product-details.scss
+++ b/src/app/components/product-details/product-details.scss
@@ -10,3 +10,44 @@ img {
     margin-top:10px;
     font-size: xx-large;
 }
+
+.description{
+   margin-top:20px;
+   margin-right: 20px;
+    font-size:larger;
+}
+
+.cost{
+   margin-top:20px;
+   margin-right: 20px;
+    font-size:xx-large;
+}
+
+.availability{
+   margin-top:20px;
+   margin-right: 20px;
+    font-size:x-large;
+}
+
+.quantity{
+  margin-top:20px;
+   margin-right: 20px;
+   font-size: large;
+}
+
+.action-button{
+    margin-top:20px;
+   margin-right: 20px;
+}
+
+.increment{
+    margin-top:20px;
+   margin-right: 20px;
+   border: 2px solid black;
+   width: 70px;
+   height:30px;
+}
+
+.review{
+    margin-top:150px;
+}
