--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -4,7 +4,7 @@
     <span class="tabs">
         <button mat-button (click)="logOut()">LogOut</button>
         <button mat-button routerLink="order-history">Order History</button>
-        <!-- <button mat-button routerLink="cart">Cart</button> -->
+        <button mat-button routerLink="cart">Cart</button>
         <button mat-button routerLink="product-dashboard">Dashboard</button>
     </span>
     }
