--- a/src/app/components/add-product-dialog/add-product-dialog.html
+++ b/src/app/components/add-product-dialog/add-product-dialog.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>{{ data ? 'Edit Patient' : 'Add New Patient' }}</h1>
+<h1 mat-dialog-title>{{ data ? 'Edit Product' : 'Add New Product' }}</h1>
 
 <div mat-dialog-content>
     <form [formGroup]="productForm">
