--- a/src/app/components/add-product-dialog/add-product-dialog.html
+++ b/src/app/components/add-product-dialog/add-product-dialog.html
@@ -1,77 +1,68 @@
 <h1 mat-dialog-title>{{ data ? 'Edit Product' : 'Add New Product' }}</h1>
 
 <div mat-dialog-content>
-    <form [formGroup]="productForm">
+  <form [formGroup]="productForm">
+    <mat-form-field>
+      <mat-label>Product Name</mat-label>
+      <input matInput formControlName="productName" />
+      <mat-error>
+        @if (productForm.get('productName')?.invalid) { Product Name is required }
+      </mat-error>
+    </mat-form-field>
+
+    <div formArrayName="img">
+      @for (control of imgArray.controls; track $index) {
+      <div>
         <mat-form-field>
-            <mat-label>Product Name</mat-label>
-            <input matInput formControlName="productName" />
-            <mat-error>
-                @if (productForm.get('productName')?.invalid) {
-                Product Name is required
-                }
-            </mat-error>
+          <mat-label>Image URL {{ $index + 1 }}</mat-label>
+          <input matInput [formControlName]="$index" />
+          <mat-error> @if (control.invalid) { Image URL is required } </mat-error>
         </mat-form-field>
 
-        <mat-form-field>
-            <mat-label>Image URL</mat-label>
-            <input matInput formControlName="img" />
-            <mat-error>
-                @if (productForm.get('img')?.invalid) {
-                Image URL is required
-                }
-            </mat-error>
-            <!-- <mat-file-upload formControlName="img">upload</mat-file-upload> -->
-        </mat-form-field>
-
-        <mat-form-field>
-            <mat-label>Description</mat-label>
-            <input matInput formControlName="description" />
-            <mat-error>
-                @if (productForm.get('description')?.invalid) {
-                Description is required
-                }
-            </mat-error>
-        </mat-form-field>
-
+        @if (imgArray.length > 1) {
+        <button mat-icon-button color="warn" (click)="removeImageField($index)">
+          <mat-icon>delete</mat-icon>
+        </button>
+        }
+      </div>
+      }
+    </div>
+    <button mat-stroked-button color="primary" (click)="addImageField()">+ Add More Images</button
+    ><br /><br />
 
     <mat-form-field>
-    <mat-label>Select Category</mat-label>
-    <mat-select formControlName="category">
-    @for (catogery of catogeries; track catogery) {
-      <mat-option [value]="catogery.value">{{catogery.name}}</mat-option>
-    }
-  </mat-select>
-   <mat-error>
-                @if (productForm.get('category')?.invalid) {
-                Category is required
-                }
-            </mat-error>
-  </mat-form-field>
+      <mat-label>Description</mat-label>
+      <input matInput formControlName="description" />
+      <mat-error>
+        @if (productForm.get('description')?.invalid) { Description is required }
+      </mat-error>
+    </mat-form-field>
 
-        <mat-form-field>
-            <mat-label>Cost</mat-label>
-            <input matInput formControlName="cost" />
-            <mat-error>
-                @if (productForm.get('cost')?.invalid) {
-                Cost is required
-                }
-            </mat-error>
-        </mat-form-field>
+    <mat-form-field>
+      <mat-label>Select Category</mat-label>
+      <mat-select formControlName="category">
+        @for (category of categories; track category) {
+        <mat-option [value]="category.value">{{ category.name }}</mat-option>
+        }
+      </mat-select>
+      <mat-error> @if (productForm.get('category')?.invalid) { Category is required } </mat-error>
+    </mat-form-field>
 
-        <mat-form-field>
-            <mat-label>Quantity</mat-label>
-            <input matInput formControlName="quantity" />
-            <mat-error>
-                @if (productForm.get('quantity')?.invalid) {
-                Quantity is required
-                }
-            </mat-error>
-        </mat-form-field>
+    <mat-form-field>
+      <mat-label>Cost</mat-label>
+      <input matInput formControlName="cost" />
+      <mat-error> @if (productForm.get('cost')?.invalid) { Cost is required } </mat-error>
+    </mat-form-field>
 
-    </form>
+    <mat-form-field>
+      <mat-label>Quantity</mat-label>
+      <input matInput formControlName="quantity" />
+      <mat-error> @if (productForm.get('quantity')?.invalid) { Quantity is required } </mat-error>
+    </mat-form-field>
+  </form>
 </div>
 
 <div mat-dialog-actions>
-    <button mat-button (click)="close()">Cancel</button>
-    <button mat-raised-button color="primary" (click)="save()">Save</button>
+  <button mat-button (click)="close()">Cancel</button>
+  <button mat-raised-button color="primary" (click)="save()">Save</button>
 </div>
