--- a/src/app/components/product-details/product-details.scss
+++ b/src/app/components/product-details/product-details.scss
@@ -1,53 +1,56 @@
 img {
-  float: left;
   width:300px;
   height:400px;
   border: 4px solid black;
-  margin: 10px 20px 15px 20px;
+  margin: 20px 20px 15px 20px;
+}
+
+.image-container {
+  display: flex;              
+  gap: 20px;                 
+  justify-content: center;    
+}
+
+.content{
+    margin: 10px 20px 15px 20px;
 }
 
 .title{
-    margin-top:10px;
+    margin: 10px 20px 15px 20px;
     font-size: xx-large;
 }
 
 .description{
-   margin-top:20px;
-   margin-right: 20px;
+   margin: 10px 20px 15px 20px;
     font-size:larger;
 }
 
 .cost{
-   margin-top:20px;
-   margin-right: 20px;
+   margin: 10px 20px 15px 20px;
     font-size:xx-large;
 }
 
 .availability{
-   margin-top:20px;
-   margin-right: 20px;
+  margin: 10px 20px 15px 20px;
     font-size:x-large;
 }
 
 .quantity{
-  margin-top:20px;
-   margin-right: 20px;
+  margin: 10px 20px 15px 20px;
    font-size: large;
 }
 
 .action-button{
-    margin-top:20px;
-   margin-right: 20px;
+    margin: 10px 20px 15px 10px;
 }
 
 .increment{
-    margin-top:20px;
-   margin-right: 20px;
+    margin: 10px 20px 15px 20px;
    border: 2px solid black;
    width: 70px;
    height:30px;
 }
 
 .review{
-    margin-top:150px;
+    margin-top:80px;
 }
