--- a/src/app/components/product-details/product-details.html
+++ b/src/app/components/product-details/product-details.html
@@ -2,7 +2,7 @@
  <div class="title"><b>{{product?.productName}}</b></div>
 <div class="image-container">
   @for (image of product?.img; track $index) {
-    <img [src]="image" alt="Product Image {{ $index + 1 }}">
+    <img [src]="image" alt="Product Image">
   }
 </div>  
     <div class="description">{{product?.description}}</div>
@@ -12,12 +12,17 @@
       
 </div>
 
-<input class="increment" matInput [formControl]="quantityValue" type="number" min="0" max={{product?.quantity}} value="0">
+
       
 <div class="action-button"> 
+  <input class="increment" matInput [formControl]="quantityValue" type="number" min="0" max={{product?.quantity}} value="0">
  <button mat-button color="accent" (click)="addToCart(product!)"> <mat-icon>bookmark</mat-icon>Add to Cart</button>
 <button mat-button color="warn" (click)="placeOrder(product!)"><mat-icon>shopping_cart</mat-icon>Shop now</button>
 </div>
-<div class="review"><app-review></app-review> </div>
+
+<button mat-raised-button (click)="showReviewStatus()" class="review-button">View Reviews</button>
+@if(showReview){
+<div class="review"  ><app-review [id]="product!.productId"></app-review> </div>
+}
 
       
