--- a/src/app/components/product-details/product-details.scss
+++ b/src/app/components/product-details/product-details.scss
@@ -52,5 +52,10 @@ img {
 }
 
 .review{
-    margin-top:80px;
+    margin-top:20px;
+}
+
+.review-button{
+  width:100%;
+  background-color: rgb(219, 225, 225);
 }
