--- a/src/app/components/add-product-dialog/add-product-dialog.html
+++ b/src/app/components/add-product-dialog/add-product-dialog.html
@@ -27,7 +27,7 @@
       </div>
       }
     </div>
-    <button mat-stroked-button color="primary" (click)="addImageField()">+ Add More Images</button
+    <button mat-raised-button color="primary" (click)="addImageField()">+ Add More Images</button
     ><br /><br />
 
     <mat-form-field>
