--- a/src/app/components/cart/cart.scss
+++ b/src/app/components/cart/cart.scss
@@ -1,10 +1,10 @@
 .remove-button{
-  
-    margin-bottom: 10px;
+    height:20px;
+    width: 20px;
+   margin-bottom: 10px;
     margin-right: 10px;
-    font-size: larger;
-    background-color: rgb(249, 247, 214);
-    border-radius: 5px;
+    background-color: rgb(218, 217, 213);
+   
     
 }
 
