--- a/src/app/components/order-history/order-history.scss
+++ b/src/app/components/order-history/order-history.scss
@@ -1,10 +1,10 @@
 .remove-button{
-  
-    margin-bottom: 70px;
+    height:20px;
+    width: 20px;
+    margin-bottom: 90px;
     margin-right: 10px;
-    font-size: larger;
-    background-color: rgb(249, 247, 214);
-    border-radius: 10px;
+    background-color: rgb(218, 217, 213);
+   
     
 }
 
