--- a/src/app/components/review-dialog/review-dialog.html
+++ b/src/app/components/review-dialog/review-dialog.html
@@ -1,1 +1,22 @@
-<p>review-dialog works!</p>
+<h1 mat-dialog-title>Add Review for the product</h1>
+
+<div mat-dialog-content>
+    <form [formGroup]="reviewForm">
+        <mat-form-field>
+            <mat-label>Please give your feedback</mat-label>
+            <input matInput formControlName="reviewText" />
+            <mat-error>
+                @if (reviewForm.get('reviewText')?.invalid) {
+                Please give your feedback
+                }
+            </mat-error>
+        </mat-form-field>
+
+
+    </form>
+</div>
+
+<div mat-dialog-actions>
+    <button mat-button (click)="close()">Cancel</button>
+    <button mat-raised-button color="primary" (click)="save()">Submit</button>
+</div>
