--- a/src/app/components/review/review.scss
+++ b/src/app/components/review/review.scss
@@ -1,3 +1,35 @@
 h1{
     margin-left: 20px;
 }
+
+.add-button{
+    margin-left:85%;
+    background-color: rgb(218, 218, 214);
+}
+
+.custom-card{
+     margin-top:10px ;
+    margin-bottom: 20px;
+    margin-right: 10px;
+    margin-left:20px;
+    height: 150px;
+}
+
+.remove-button{
+    height:20px;
+    width: 20px;
+    margin-right: 10px;
+    margin-left:1200px;
+    background-color: rgb(218, 217, 213); 
+}
+
+img{
+    width: 30px; 
+  height: 30px;
+  border: 2px solid rgb(45, 45, 47); 
+  border-radius: 50%; 
+}
+
+.content{
+    font-size: large;
+}
