--- a/src/app/components/order-dialog/order-dialog.html
+++ b/src/app/components/order-dialog/order-dialog.html
@@ -12,7 +12,7 @@
             </mat-error>
         </mat-form-field>
 
-        <mat-form-field>
+        <!-- <mat-form-field>
             <mat-label>quantity</mat-label>
             <input matInput formControlName="quantity" type="number" min="0" max={{data.quantity}} value="0" />
             <mat-error>
@@ -20,7 +20,7 @@
                 Quantity is required
                 }
             </mat-error>
-  </mat-form-field>
+  </mat-form-field> -->
 
     </form>
 </div>
