--- a/src/app/components/cart/cart.scss
+++ b/src/app/components/cart/cart.scss
@@ -5,7 +5,6 @@
     margin-right: 10px;
     background-color: rgb(218, 217, 213);
    
-    
 }
 
 .custom-card{
@@ -15,7 +14,7 @@
     margin-left:20px;
 }
 
-h1{
+h1,h2{
      margin-left:20px;
 }
 
@@ -51,3 +50,8 @@ img{
 .quantity{
     margin-left: 220px;
 }
+
+.order{
+    margin-left:92%;
+}
+
