--- a/src/app/components/order-history/order-history.scss
+++ b/src/app/components/order-history/order-history.scss
@@ -1,10 +1,9 @@
 .remove-button{
     height:20px;
     width: 20px;
-    margin-bottom: 90px;
+    margin-bottom: 5px;
     margin-right: 10px;
     background-color: rgb(218, 217, 213);
-   
     
 }
 
@@ -52,4 +51,8 @@ img{
 
 .quantity{
     margin-left: 220px;
+}
+
+.order-container{
+  margin-bottom: 20px;  
 }
