--- a/src/app/components/product-details/product-details.scss
+++ b/src/app/components/product-details/product-details.scss
@@ -56,6 +56,21 @@ img {
 }
 
 .review-button{
+   margin-bottom:60px;
   width:100%;
   background-color: rgb(219, 225, 225);
+}
+
+
+.suggestion{
+ 
+  display:flex;              
+  gap: 20px;              
+  justify-content: center;
+  
+}
+
+.content{
+  display:flex;
+  font-size: large;
 }
