--- a/src/app/components/order-history/order-history.scss
+++ b/src/app/components/order-history/order-history.scss
@@ -54,5 +54,8 @@ img{
 }
 
 .order-container{
-  margin-bottom: 20px;  
+  margin-bottom: 20px; 
+  margin-left: 20px;
+  margin-right: 20px;
+  border: 2px solid black; 
 }
