--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -7,10 +7,16 @@
   <mat-form-field>
     <mat-label>Email</mat-label>
     <input matInput placeholder="Enter your registered email" formControlName="email" />
+    <mat-error>
+        @if (loginForm.get('email')?.invalid) { Email is required }
+      </mat-error>
   </mat-form-field><br>
   <mat-form-field>
   <mat-label>Password</mat-label>
   <input matInput type="password" placeholder="Enter your password" formControlName="password" />
+  <mat-error>
+        @if (loginForm.get('password')?.invalid) { password is required }
+      </mat-error>
 </mat-form-field><br>
     <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Login</button><br><br>
     <div> New User? <a routerLink="/signup">SignUp here</a></div>
