--- a/src/app/components/sign-up/sign-up.html
+++ b/src/app/components/sign-up/sign-up.html
@@ -3,27 +3,45 @@
     <mat-card-title><b>SignUp</b></mat-card-title>
   </mat-card-header>
   <mat-card-content>
-   <form [formGroup]="form" (ngSubmit)="onSubmit()">
+   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
   <mat-form-field>
     <mat-label>Full Name</mat-label>
     <input matInput placeholder="Enter your full name" formControlName="username" />
+    <mat-error>
+        @if (signupForm.get('password')?.invalid) { Name is required }
+      </mat-error>
   </mat-form-field><br>
     <mat-form-field>
         <mat-label>Email</mat-label>
         <input matInput type="email" placeholder="Enter your email" formControlName="email" />
+        <mat-error>
+        @if (signupForm.get('password')?.invalid) {Proper Email is required }
+      </mat-error>
   </mat-form-field><br>
       <mat-form-field>
         <mat-label>Phone:</mat-label>
         <input matInput  placeholder="Enter your Phone Number" formControlName="phone" />
+        <mat-error>
+        @if (signupForm.get('password')?.invalid) { Phone number is required }
+      </mat-error>
   </mat-form-field><br>
   <mat-form-field>
   <mat-label>Password</mat-label>
   <input matInput type="password" placeholder="Enter your password" formControlName="password" />
+<mat-error>
+        @if (signupForm.get('password')?.invalid) { Password is required }
+        
+        
+      </mat-error>
 </mat-form-field><br>
   <mat-form-field>
   <mat-label> Confirm Password</mat-label>
   <input matInput type="password" placeholder="Enter your password again" formControlName="confirmPassword" />
+  <mat-error>
+      @if (signupForm.get('confirmPassword')?.invalid) { Password is required }
+      @if (signupForm.get('confirmPassword')?.errors?.['passwordsMismatch'] ) {Passwords do not match}
+      </mat-error>
 </mat-form-field><br>
-    <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">SignUp</button><br><br>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.valid">SignUp</button><br><br>
     <div> Already have an account? <a routerLink="/login">Login here</a></div>
 </form>
