--- a/src/app/components/sign-up/sign-up.html
+++ b/src/app/components/sign-up/sign-up.html
@@ -8,40 +8,42 @@
     <mat-label>Full Name</mat-label>
     <input matInput placeholder="Enter your full name" formControlName="username" />
     <mat-error>
-        @if (signupForm.get('password')?.invalid) { Name is required }
+        @if (signupForm.get('username')?.invalid) { Name is required }
       </mat-error>
   </mat-form-field><br>
     <mat-form-field>
         <mat-label>Email</mat-label>
         <input matInput type="email" placeholder="Enter your email" formControlName="email" />
         <mat-error>
-        @if (signupForm.get('password')?.invalid) {Proper Email is required }
+                  @if ( !signupForm.get('email')?.value  && signupForm.controls['email'].touched ) { Email is required }
+        @if (signupForm.controls['email'].hasError('pattern') && signupForm.controls['email'].touched ){Proper Email is required }
       </mat-error>
   </mat-form-field><br>
       <mat-form-field>
         <mat-label>Phone:</mat-label>
         <input matInput  placeholder="Enter your Phone Number" formControlName="phone" />
         <mat-error>
-        @if (signupForm.get('password')?.invalid) { Phone number is required }
+                  @if ( !signupForm.get('phone')?.value  && signupForm.controls['phone'].touched ) { Phone Number is required }
+        @if (signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched ){Invalid Phone Number}
       </mat-error>
   </mat-form-field><br>
   <mat-form-field>
   <mat-label>Password</mat-label>
-  <input matInput type="password" placeholder="Enter your password" formControlName="password" />
+  <input matInput type="password" placeholder="Enter your password" formControlName="password"  (keyup)="passwordCheck()" />
 <mat-error>
-        @if (signupForm.get('password')?.invalid) { Password is required }
-        
-        
+        @if (signupForm.get('password')?.invalid) { Password is required }     
       </mat-error>
 </mat-form-field><br>
   <mat-form-field>
   <mat-label> Confirm Password</mat-label>
-  <input matInput type="password" placeholder="Enter your password again" formControlName="confirmPassword" />
+  <input matInput type="password" placeholder="Enter your password again" formControlName="confirmPassword" (keyup)="passwordCheck()" />
   <mat-error>
       @if (signupForm.get('confirmPassword')?.invalid) { Password is required }
-      @if (signupForm.get('confirmPassword')?.errors?.['passwordsMismatch'] ) {Passwords do not match}
+      <!-- @if (signupForm.get('confirmPassword')?.errors?.['passwordsMismatch'] ) {Passwords do not match} -->
       </mat-error>
 </mat-form-field><br>
+     <div class="password-error">  @if (checkPasswordValue){Passwords do not match}</div>
+
     <button mat-raised-button color="primary" type="submit" [disabled]="!signupForm.valid">SignUp</button><br><br>
     <div> Already have an account? <a routerLink="/login">Login here</a></div>
 </form>
