--- a/src/app/components/product-dashboard/product-dashboard.component.html
+++ b/src/app/components/product-dashboard/product-dashboard.component.html
@@ -1,91 +1,85 @@
-<div class="top"> 
-<button class="add-button" matFab extended color="primary" (click)="openDialog()"><mat-icon >add</mat-icon>New Product</button>
+<div class="top">
+  <button class="add-button" matFab extended color="primary" (click)="openDialog()"><mat-icon>add</mat-icon>New
+    Product</button>
 
-<mat-form-field class="search">
-  <mat-label><mat-icon>search</mat-icon> Search</mat-label>
-  <input matInput (keyup)='search($event)'>
-</mat-form-field>
+  <mat-form-field class="search">
+    <mat-label><mat-icon>search</mat-icon> Search</mat-label>
+    <input matInput (keyup)='search($event)'>
+  </mat-form-field>
 
-<mat-form-field class="filter">
-      <mat-label>Select Category</mat-label>
-<mat-select formControlName="category" > 
-        @for (category of categories; track category) {
-        <mat-option [value]="category.value" (click)="categoryData(category.value)">{{ category.name }}</mat-option>
-        }
-      </mat-select>
-      </mat-form-field>
-
-      @if(this.category !== 'All'){
-              <mat-button-toggle-group class="toggle"  (change)="toggle($event.value)">
-  <mat-button-toggle value="In Stock" >In Stock</mat-button-toggle>
-  <mat-button-toggle value="Out of Stock">Out of Stock</mat-button-toggle>
-</mat-button-toggle-group>
+  <mat-form-field class="filter">
+    <mat-label>Select Category</mat-label>
+    <mat-select formControlName="category">
+      @for (category of categories; track category) {
+      <mat-option [value]="category.categoryName" (click)="categoryData(category.categoryName)">{{ category.categoryName }}</mat-option>
       }
+    </mat-select>
+  </mat-form-field>
 
+  <mat-button-toggle-group class="toggle" value={{toggleOption}} (change)="toggle($event.value)">
+    <mat-button-toggle value='All'>All</mat-button-toggle>
+    <mat-button-toggle value="In Stock">In Stock</mat-button-toggle>
+    <mat-button-toggle value="Out of Stock">Out of Stock</mat-button-toggle>
+  </mat-button-toggle-group>
+</div>
 
-</div >
-
-
-      
-   <table mat-table [dataSource]="productDataSource" matSort  class="mat-elevation-z8">
-
+<table mat-table [dataSource]="productDataSource" matSort class="mat-elevation-z8">
   <ng-container matColumnDef="img">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header >
-      View
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <b>Product</b>
     </th>
-    <td mat-cell *matCellDef="let product" (click)="cardClick(product!.productId)"> <img mat-card-image src={{product.img}} alt="Profile Photo"/> </td>
+    <td mat-cell *matCellDef="let product" (click)="cardClick(product!.productId)"> <img mat-card-image
+        src={{product.img}} alt="Profile Photo" /> </td>
   </ng-container>
 
-  
-  <ng-container matColumnDef="productName" >
+  <ng-container matColumnDef="productName">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by productName">
-     <b>Name </b> 
+      <b>Name </b>
     </th>
     <td mat-cell *matCellDef="let product" (click)="cardClick(product!.productId)"> <b>{{product.productName}}</b> </td>
   </ng-container>
 
-  
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by description">
-     <b> Description</b> 
+      <b> Description</b>
     </th>
     <td mat-cell *matCellDef="let product" (click)="cardClick(product!.productId)"> {{product.description}} </td>
   </ng-container>
 
-
-  <ng-container matColumnDef="category" >
+  <ng-container matColumnDef="category">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by category">
-     <b>Category </b> 
+      <b>Category </b>
     </th>
     <td mat-cell *matCellDef="let product" (click)="cardClick(product!.productId)"> {{product.category}} </td>
   </ng-container>
 
   <ng-container matColumnDef="cost">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by cost">
-     <b>Cost </b> 
+      <b>Cost </b>
     </th>
-    <td mat-cell *matCellDef="let product" (click)="cardClick(product!.productId)"> {{ product.cost | currency:'INR' :'symbol':'1.0-2' }} </td>
+    <td mat-cell *matCellDef="let product" (click)="cardClick(product!.productId)"> {{ product.cost | currency:'INR'
+      :'symbol':'1.0-2' }} </td>
   </ng-container>
 
-   <ng-container matColumnDef="quantity" >
+  <ng-container matColumnDef="quantity">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by quantity">
-     <b>Quantity </b> 
+      <b>Quantity </b>
     </th>
     <td mat-cell *matCellDef="let product" (click)="cardClick(product!.productId)"> {{product.quantity}} </td>
   </ng-container>
 
-   <ng-container matColumnDef="action">
+  <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef><b>Action </b> </th>
     <td mat-cell *matCellDef="let product">
-       <!-- <button mat-button color="accent"  (click)="productDetail(product.productId)"><mat-icon>info</mat-icon>View product</button> -->
+      <!-- <button mat-button color="accent"  (click)="productDetail(product.productId)"><mat-icon>info</mat-icon>View product</button> -->
       <!-- <button mat-button color="warn"><mat-icon>shopping_cart</mat-icon>Shop now</button> -->
-     <button class="menu" mat-icon-button [matMenuTriggerFor]="menu">
-                                      <mat-icon>more_vert</mat-icon>
-                                    </button>
-                                    <mat-menu #menu="matMenu">
-                                        <button mat-menu-item (click)="openDialog(product)">Edit</button>
-                                        <button mat-menu-item (click)="deleteProduct(product.productId)">Delete</button>
-                                    </mat-menu>
+      <button class="menu" mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="openDialog(product)">Edit</button>
+        <button mat-menu-item (click)="deleteProduct(product.productId)">Delete</button>
+      </mat-menu>
     </td>
   </ng-container>
 
@@ -93,6 +87,4 @@
   <tr mat-row *matRowDef="let row; columns: productDisplayedColumns;"></tr>
 </table>
 
- <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons>
-  </mat-paginator>
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons> </mat-paginator>
